Show/Hide zero-balance equities in account models

BUG:340158
FIXED-IN:5.0

Differential Revision: https://phabricator.kde.org/D5341

Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>